changed icons to color black

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     				<div class="col-md-12">
 
     					<div class=" text-center editContent">
-    					<h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit?</h1>
+    					<h1></h1>
 
 
     					</div><!-- /.editContent -->
@@ -112,7 +112,7 @@
 
     				   	<div class="col">
 
-    						<img alt="" src="images/icons/NonProfitCrewIcon.svg" style="width: 30%;">
+    						<img alt="" src="images/icons/workforcetrainingnonprofiticon.png" style="width: 30%;">
 
     						<div class="editContent">
     						<h3>Workforce Training Non-profit</h3>
@@ -129,7 +129,7 @@
 
     				    <div class="col">
 
-    						<img alt="" src="images/icons/ContractorIcon.svg" style="width: 30%;">
+    						<img alt="" src="images/icons/ContractorIcon.png" style="width: 30%;">
 
     						<div class="editContent" style="">
     						<h3>Developer/General Contractor</h3>
