--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
 
     					<div id="navbar-collapse-02" class="collapse navbar-collapse">
     						<ul class="nav navbar-nav navbar-right">
-    							<li class="active propClone"><a href="#">Home</a></li>
-    							<li class="propClone"><a href="#">Work</a></li>
-    							<li class="propClone"><a href="#">Blog</a></li>
-    							<li class="propClone"><a href="#">Contact</a></li>
+    							<li class="active propClone"><a href="#">FOR NONPROFITS</a></li>
+    							<li class="propClone"><a href="#">FOR DEVELOPERS</a></li>
+    							<li class="propClone"><a href="#">ABOUT</a></li>
+    							<li class="propClone"><a href="#">SIGN IN</a></li>
     						</ul>
     					</div><!-- /.navbar-collapse -->
     				</nav>
@@ -58,15 +58,15 @@
 
     		</div><!-- /.wrpaper -->
 
-    		<header class="wrapper grey">
+    		<header class="wrapper grey" style="background-image:url('images/FirstMainSectionBackground3.jpg')" >
 
-    			<div class="container">
+    			<div class="container" >
 
     				<div class="row banner2">
 
     					<div class="col-md-12">
 
-    						<h1 class="text-center editContent">Turning Gentrification into Integration</h1>
+    						<h1 class="text-center editContent" style="font-size:3em">Turning Gentrification into Integration</h1>
 
     						<h2 class="text-center editContent">
     					We promote social responsibility and sustainable workforces by advancing partnerships between local residents, workforce training non-profits, and business developers.
@@ -74,8 +74,8 @@
 
            <div class="text-center margin-buttom-100">
 
-    						<a href="#" class="btn btn-primary btn-embossed btn-wide"><span class="fa fa-arrow-circle-o-right"></span> Learn more</a>
-                <a href="#" class="btn btn-primary btn-embossed btn-wide"><span class="fa fa-arrow-circle-o-right"></span> Learn more</a>
+    						<a href="#" class="btn btn-primary btn-embossed btn-wide" style="background:#2acf5a"><span class="fa fa-arrow-circle-o-right"></span> WATCH DEMO</a>
+                <a href="#" class="btn btn-primary btn-embossed btn-wide" style="background:#2acf5a"><span class="fa fa-arrow-circle-o-right"></span> DONATE</a>
             </div>
 
     					</div>
@@ -205,13 +205,13 @@
     						</p>
     				   	</div><!-- /.editContent -->
 
-    					<a href="#" class="btn btn-primary btn-embossed">Learn more</a>
+    					<a href="#" class="btn btn-primary btn-embossed" style="background:#2acf5a">Learn more</a>
 
     				</div><!-- /.col-md-4 col -->
 
     				<div class="col-md-6 text-center">
 
-    				    <img alt="" src="images/icons/CSRIcon.svg" style="width: 28%;">
+    				    <img alt="" src="images/icons/CSRIcon.svg" style="width: 23%;">
 
     				   	<div class="text-center editContent">
                   <h3>Social Responsibility</h3>
@@ -221,7 +221,7 @@
                   </p>
     				   	</div><!-- /.editContent -->
 
-    					<a href="#" class="btn btn-primary btn-embossed">Learn more</a>
+    					<a href="#" class="btn btn-primary btn-embossed" style="background:#2acf5a">Learn more</a>
 
     				</div><!-- /.col-md-4 col -->
 
@@ -259,33 +259,16 @@
 
                         <ul class="bottom-links">
              							        <li><a href="#fakelink">About</a></li>
-              		                <li><a href="#fakelink">News</a></li>
-              		                <li><a href="#fakelink">Terms</a></li>
-              		                <li><a href="#fakelink">Privacy</a></li>
-              		                <li><a href="#fakelink">Volunteer</a></li>
+              		                <li><a href="#fakelink">Developers</a></li>
+              		                <li><a href="#fakelink">Nonprofits</a></li>
+              		                <li><a href="#fakelink">Sign In</a></li>
 
-            						</ul>
+                         </ul>
              					</div>
 
-            					<div class="col-md-2">
-            						<h5 class="title">PRODUCT</h5>
-            						<ul class="bottom-links">
-              		                <li><a href="#fakelink">Generals</a></li>
-              		                <li><a href="#fakelink">Owners</a></li>
-              		                <li><a href="#fakelink">Videos</a></li>
 
-             						</ul>
-             					</div>
 
-            					<div class="col-md-2">
 
-             						<h5 class="title">REACH</h5>
-              					<ul class="bottom-links">
-              		                <li><a href="#fakelink">Contact</a></li>
-              		                <li><a href="#fakelink">Support</a></li>
-
-              					</ul>
-            					</div>
 
 
                       <div class="col-md-2">
@@ -293,7 +276,7 @@
                         <h5 class="title">SOCIAL</h5>
                         <ul class="bottom-links">
                                   <li><a href="#fakelink">Facebook</a></li>
-                                  <li><a href="#fakelink">LinkedIn</a></li>
+
                                   <li><a href="#fakelink">Twitter</a></li>
 
                         </ul>
@@ -320,7 +303,7 @@
     				  		<textarea class="form-control" rows="4" placeholder="Add comment..."></textarea>
     				  	</div>
 
-    				  	<button type="submit" class="btn btn-primary btn-embossed btn-lg btn-wide"><span class="fui-mail"></span> Submit</button>
+    				  	<button type="submit" class="btn btn-primary btn-embossed btn-lg btn-wide" style="background:#2acf5a"><span class="fui-mail"></span> Submit</button>
 
     				</form>
 
