--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     							<li class="active propClone"><a href="#">FOR NONPROFITS</a></li>
     							<li class="propClone"><a href="#">FOR DEVELOPERS</a></li>
     							<li class="propClone"><a href="#">ABOUT</a></li>
-    							<li class="propClone"><a href="#">SIGN IN</a></li>
+    							<li><a href="#" style="background-color:#2acf5a; color:white; size:2px;" >SIGN IN</a> </li>
     						</ul>
     					</div><!-- /.navbar-collapse -->
     				</nav>
@@ -112,12 +112,12 @@
 
     				   	<div class="col">
 
-    						<img alt="" src="images/icons/workforcetrainingnonprofiticon.png" style="width: 30%;">
+    						<img alt="" src="images/icons/ClockIcon.svg" style="width: 30%;">
 
     						<div class="editContent">
-    						<h3>Workforce Training Non-profit</h3>
+    						<h3>Quick Connections</h3>
     						<p>
-                Find paid training opportunities for your crews and participants. Review and bid on RFPs in your area.
+                Seamlessly builds digital connections between workforce training non-profits and business developers
     						</p>
     						</div><!-- /.editContent -->
 
@@ -129,12 +129,12 @@
 
     				    <div class="col">
 
-    						<img alt="" src="images/icons/ContractorIcon.png" style="width: 30%;">
+    						<img alt="" src="images/icons/EasyIcon.svg" style="width: 30%;">
 
     						<div class="editContent" style="">
-    						<h3>Developer/General Contractor</h3>
+    						<h3>Easy to Use</h3>
                 <p>
-    					  Meet local hiring requirements by finding and connecting with community non-profits. Post RFPs and track progress using a convenient and intuitive dashboard
+    					  Our user-firendly platform akes posting and bidding super-easy
                 <p/>
     						</div><!-- /.editContent -->
 
@@ -146,13 +146,13 @@
 
     				   	<div class="col">
 
-    						<img alt="" src="images/icons/ClockIcon.svg" style="width: 30%;">
+    						<img alt="" src="images/icons/CSRIcon.svg" style="width: 30%;">
 
     						<div class="editContent">
-    						<h3>Quick Connections</h3>
+    						<h3>Social Responsibility</h3>
 
     						<p>
-    					Seamlessly builds digital connections between workforce training non-profits and business developers
+    					Do your part to ensure economic equality. Build skills while building the community.
                 </p>
 
 
@@ -195,13 +195,13 @@
 
     				<div class="col-md-6 text-center">
 
-    				   	<img alt="" src="images/icons/EasyIcon.svg">
+    				   	<img alt="" src="images/icons/workforcetrainingnonprofiticon.png" style="width: 35%">
 
   				   	<div class="text-center editContent">
-                <h3>Easy to Use</h3>
+                <h3>Work Force Training Non-profit</h3>
 
     						<p>
-    						Our user-friendly platform makes posting and bidding super-easy
+    						Find paid training opportunities for your crews and participants. Review and bid on RFPs in your area.
     						</p>
     				   	</div><!-- /.editContent -->
 
@@ -211,13 +211,13 @@
 
     				<div class="col-md-6 text-center">
 
-    				    <img alt="" src="images/icons/CSRIcon.svg" style="width: 23%;">
+    				    <img alt="" src="images/icons/ContractorIcon.png" style="width: 23%;">
 
     				   	<div class="text-center editContent">
-                  <h3>Social Responsibility</h3>
+                  <h3>Developer/General Contractor</h3>
 
                   <p>
-                Do your part to help ensure economic equality. Build skills while building the community
+                Meet local hiring requirements by finding and connecting with community non-profits. Post RFPs and track progress using a convenient and intuitive dashboard.
                   </p>
     				   	</div><!-- /.editContent -->
 
