--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     						<div class="editContent" style="">
     						<h3>Easy to Use</h3>
                 <p>
-    					  Our user-firendly platform akes posting and bidding super-easy
+    					  Our user-friendly platform makes posting and bidding super-easy
                 <p/>
     						</div><!-- /.editContent -->
 
